--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Click ShopN - Official</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-    <meta content="Click ShopN is From a safe dev and the experienced marketers of princess striker that did x4-5!!! Comes another bullish project." name="description">
+    <meta content="Click ShopN is From a safe dev and the experienced marketers that did x4-5!!! Comes another bullish project." name="description">
     <meta content="IE=edge" http-equiv="X-UA-Compatible"></meta>
 	<link rel="shortcut icon" href="clickshopN.png" type="image/x-icon">
     <meta content="index, follow" name="ROBOTS">
@@ -146,7 +146,7 @@
                 </div>
                 <div class="desc-content" data-aos="fade-left" data-aos-delay="300" data-aos-duration="1000">
                     <div class="title">Click ShopN</div>
-                    <p class="desc"><strong> 🔥 Click ShopN</strong> From a safe dev and the experienced marketers of princess striker that did x4-5!!!
+                    <p class="desc"><strong> 🔥 Click ShopN</strong> From a safe dev and the experienced marketers that did x4-5!!!
                         Comes another bullish project.</p>
                         <p class="desc">🌸 It features a DiamondHands investor fee, which will only reward holders who do not sell. The distribution is done every day and checks for wallets that sold for the past 24 hours.</p>
                 </div>
@@ -173,7 +173,7 @@
                     </div>
                     <div class="text-content">
                         <div class="title">Community Drive</div>
-                        <div class="desc">Click ShopN is Stealth Launch, and it will be community drive, this project will be depinding on the community.</div>
+                        <div class="desc">Click ShopN is Stealth Launch, and it will be community drive. This project will be depinding on the community.</div>
                     </div>
                 </div>
                 <div class="item" data-aos="fade-up" data-aos-delay="300" data-aos-duration="3000">
