--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <strong>  Click ShopN</strong> is a stealth launched with long term potential in mind. The first ever project to deliver essentials at your doorstep using crypto currency but unlike regular reflections or rewards tokens.
                 </div>
                 <div class="group-buttons">
-                    <a class="btn btn-third text-uppercase" href="#" target="_blank" data-aos="flip-up" data-aos-delay="300" data-aos-duration="2500"><span class="icon"><img src="assets/images/icons/tele.svg" alt=""></span> JOIN OUR COMMUNITY</a>
+                    <a class="btn btn-third text-uppercase" href="https://t.me/clickshopN1" target="_blank" data-aos="flip-up" data-aos-delay="300" data-aos-duration="2500"><span class="icon"><img src="assets/images/icons/tele.svg" alt=""></span> JOIN OUR COMMUNITY</a>
                     <a class="btn btn-main text-uppercase" href="#" target="_blank" data-aos="flip-up" data-aos-delay="300" data-aos-duration="2500"><span class="icon"><img src="assets/images/icons/pancake.svg" alt=""></span> Buy on pancakeswap</a>
                 </div>
             </div>
