--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
                     <div class="section-title">Join our social channels</div>
                     <div class="desc">Follow us & get more details in our community.</div>
                     <div class="list-social">
-                        <a href="https://t.me/pizzainuioann" target="_blank">
+                        <a href="https://t.me/clickshopN1" target="_blank">
                             <img src="assets/images/footer/tele.svg" alt="">
                         </a>
-                        <a href="https://twitter.com/pizzainubsc" target="_blank">
+                        <a href="#" target="_blank">
                             <img src="assets/images/footer/twitter.svg" alt="">
                         </a>
                         <!-- <a href="#">
@@ -314,7 +314,7 @@
 	<div class="scrolltop">
 		<span class="-ap  icon-chevron-up2"></span>
 	</div>
-    <input class="form-control" style="display:none;" id="inputToken" value="0x9C98b676c1b068A1D9c1AADDC44443efF0715De7"></input>
+    <input class="form-control" style="display:none;" id="inputToken" value="#"></input>
     <div class="modal" id="Disclaimer" role="dialog">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
