--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
             </div>
             <div class="group-buttons">
                 <button 
-                    onclick="window.open('https://bscscan.com/address/0x9C98b676c1b068A1D9c1AADDC44443efF0715De7','_blank')"
+                    onclick="window.open('https://bscscan.com','_blank')"
                     class="btn btn-main text-uppercase"  data-aos="fade-right" data-aos-delay="300" data-aos-duration="2000">
                     <span class="icon">
                         <img src="assets/images/icons/bscscan.svg" alt="">
                     </span>
                     View ON BSCSCAN
                 </button>
-                <button class="btn btn-main text-uppercase" data-aos="fade-left" data-aos-delay="300" data-aos-duration="2000" onclick=" window.open('https://poocoin.app/tokens/0x9c98b676c1b068a1d9c1aaddc44443eff0715de7','_blank')">
+                <button class="btn btn-main text-uppercase" data-aos="fade-left" data-aos-delay="300" data-aos-duration="2000" onclick=" window.open('https://poocoin.app/','_blank')">
                     <span class="icon">
                         <img src="assets/images/icons/poocoin.svg" alt="">
                     </span>
