--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="container">
             <h2 class="section-title" data-aos="flip-up" data-aos-delay="300" data-aos-duration="1000">Live chart</h2>
             <div class="input-buynow"  data-aos="flip-up" data-aos-delay="300" data-aos-duration="2000">
-                <span class="text-m" style="font-weight:400;">Contract Address: --</span>
+                <span class="text-m" style="font-weight:400;">Contract Address: 0xea50053e91622ffc794854fd76423db4455ea849</span>
                 
                 <div class="tooltip-box">
                     <button class="btn" onmouseout="outFunc()" onclick="CopyFunc()">
@@ -116,14 +116,14 @@
             </div>
             <div class="group-buttons">
                 <button 
-                    onclick="window.open('https://bscscan.com','_blank')"
+                    onclick="window.open('https://www.bscscan.com/address/0xea50053e91622ffc794854fd76423db4455ea849','_blank')"
                     class="btn btn-main text-uppercase"  data-aos="fade-right" data-aos-delay="300" data-aos-duration="2000">
                     <span class="icon">
                         <img src="assets/images/icons/bscscan.svg" alt="">
                     </span>
                     View ON BSCSCAN
                 </button>
-                <button class="btn btn-main text-uppercase" data-aos="fade-left" data-aos-delay="300" data-aos-duration="2000" onclick=" window.open('https://poocoin.app/','_blank')">
+                <button class="btn btn-main text-uppercase" data-aos="fade-left" data-aos-delay="300" data-aos-duration="2000" onclick=" window.open('https://poocoin.app/tokens/0xeA50053e91622ffC794854FD76423db4455eA849','_blank')">
                     <span class="icon">
                         <img src="assets/images/icons/poocoin.svg" alt="">
                     </span>
