--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="info-box">
                         <div class="key">Contract:</div>
                         <div class="value">
-                            <span class="text-m" style="font-weight:400;"> --- </span>
+                            <span class="text-m" style="font-weight:400;"> 0xeA50053e91622ffC794854FD76423db4455eA849 </span>
                 
                             <div class="tooltip-box">
                                 <button class="btn" onmouseout="outFunc()" onclick="CopyFunc()">
