--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="group-buttons">
                     <a class="btn btn-third text-uppercase" href="https://t.me/clickshopN1" target="_blank" data-aos="flip-up" data-aos-delay="300" data-aos-duration="2500"><span class="icon"><img src="assets/images/icons/tele.svg" alt=""></span> JOIN OUR COMMUNITY</a>
-                    <a class="btn btn-main text-uppercase" href="#" target="_blank" data-aos="flip-up" data-aos-delay="300" data-aos-duration="2500"><span class="icon"><img src="assets/images/icons/pancake.svg" alt=""></span> Buy on pancakeswap</a>
+                    <a class="btn btn-main text-uppercase" href="https://pancakeswap.finance/swap?outputCurrency=0xeA50053e91622ffC794854FD76423db4455eA849" target="_blank" data-aos="flip-up" data-aos-delay="300" data-aos-duration="2500"><span class="icon"><img src="assets/images/icons/pancake.svg" alt=""></span> Buy on pancakeswap</a>
                 </div>
             </div>
             <div class="hero-img" data-aos="fade-left" data-aos-delay="300" data-aos-duration="500">
